# Crept

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stream_processor.pc.in
include/: stream_processor.h
include/common/: logging.h  types.h
lib/: CMakeLists.txt
scripts/: build.sh  install_dependencies.sh  setup_directories.sh  setup_tests.sh  test.sh  verify_deps.sh
scripts/docker/: Dockerfile  docker-compose.yml
src/: main.c
src/common/: logging.c  types.c
tests/: CMakeLists.txt
tests/unit/: test_basic.c
